# lambda-cli

./: .gitignore  README.md  pyproject.toml
lambda_cli/: main.py
