[tool.poetry]
name = "lambda-cli"
version = "0.1.0"
description = ""
authors = ["jon <jonathan.n@u.nus.edu>"]
readme = "README.md"
packages = [{include = "lambda_cli"}]

[tool.poetry.scripts]
lambda = "lambda_cli.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
yaspin = "^2.3.0"
bullet = "^2.2.0"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
